Fix undo button not sliding, fix deadspace on undo margins (stretched horizontally, quickfix)

--- a/resources/public/style.css
+++ b/resources/public/style.css
@@ -476,9 +476,9 @@ body:not(.show-placeable-bubble) #placeableInfoBubble {
 }
 
 #undo {
-    width: 10em;
+    width: 100%;
     text-align: center;
-    background-color: #FFF;
+    background-image: linear-gradient(to top, #FFFC, #FFF);
     transition: height .25s ease-in-out;
     height: 0px;
     flex-flow: column;
@@ -492,8 +492,6 @@ body:not(.show-placeable-bubble) #placeableInfoBubble {
 
 #undo.open {
     border-top: 1px solid #000;
-    border-right: 1px solid #000;
-    border-top-right-radius: 5px;
     height: 2em;
 }
 
